2008-07-23  Geoff Cant  <geoff.cant@process-one.net>

	* src/mod_muc/mod_muc_room.erl: new room options,
	allow_visitor_presence and allow_visitor_nickchange to
	block/enable visitors to broadcast presence updates to the room
	(EJAB-624).

2008-07-23  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: remove_user hook removes
	subscriptions (EJAB-684), send the last published and not the
	first published item (EJAB-675), remove the pubsub/nodes tree,
	subscribing to a node sends only last items (EJAB-700)
	* src/mod_pubsub/node_pep.erl: added acl and jid match on node
	creation permission (EJAB-663)
	* src/mod_pubsub/node_default.erl: fix node creation permission 
	issue for service

2008-07-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_config.erl: If syntax mistake in config file, show
	specific error message (EJAB-616)

2008-07-17  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Fix to allow a server admin to add
	himself as owner of a room (EJAB-687)

	* src/Makefile.in: ejabberctl doesn't use the erl found by the
	configure script (EJAB-676)
	* src/ejabberdctl.template: Likewise

2008-07-17  Christophe Romain  <christophe.romain@process-one.net>

	* src/web/Makefile.in: use -DSSL39 if compiling with R12 

2008-07-16  Badlop  <badlop@process-one.net>

	* src/ejabberd_c2s.erl: Put auth_module in Info always (EJAB-549)

2008-07-16  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_http_poll.erl: Report connection's IP address 

	* src/ejabberd_c2s.erl: Rolled back the previous IP getting patch
	* src/ejabberd_sm.erl: Likewise
	* src/ejabberd_receiver.erl: Likewise
	* src/web/ejabberd_http_poll.erl: Likewise

2008-07-16  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improve explanation of option 'hosts' in
	ejabberd_service
	* doc/guide.html: Likewise

2008-07-12  Badlop  <badlop@process-one.net>

	* src/configure.ac: Improve legibility
	* src/aclocal.m4: Likewise